test/expected/shellcheck_test_double_equals.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "[" "a" "==" "b" "]"]
[Word
  Unquoted "["
]
[Word
  Unquoted "a"
]
[Word
  Unquoted "=="
]
[Word
  Unquoted "b"
]
[Word
  Unquoted "]"
]
shit: 2:5: warning: == is undefined in POSIX test.
     2 |  [ a == b ]
       |      ^~ here.
note: Use = for string equality.
shit: 2:1: error: Builtin '[': Unable to evaluate the test because '==' is a bashism, use = for string equality in POSIX mode.
     2 |  [ a == b ]
       |  ^~~~~~~~~~ here.
